# Cross-Compatible-FileLock-Windows-and-Linux

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.cpp
.github/: FUNDING.yml
fileLock/: FileLockFactory.h  IFileLock.h  LinuxFileLock.cpp  LinuxFileLock.h  LinuxFileLockFactory.cpp  LinuxFileLockFactory.h  WindowsFileLock.cpp  WindowsFileLock.h  WindowsFileLockFactory.cpp  WindowsFileLockFactory.h  fileLock.cpp  fileLock.h  fileLockFactory.cpp  fileLockFactory.h  linuxFileLock.cpp  linuxFileLock.h  main.cpp  windowsFileLock.cpp  windowsFileLock.h
include/: FileLock.h  FileLockContext.h  FileLockFactory.h  FileLockFactory.hpp  FileLockStrategy.h  FileLockStrategy.hpp  UnixFileLock.h  UnixFileLock.hpp  WindowsFileLock.h  WindowsFileLock.hpp
readmeImage/: .$basicDiagram.drawio.bkp  basicDiagram.drawio
src/: FileLock.cpp  FileLockFactory.cpp  UnixFileLock.cpp  WindowsFileLock.cpp  main.cpp
